<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:weightSum="1" android:layout_height="wrap_content">
	<TextView android:id="@+id/hello" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/uploadAt" />
	<TextView android:id="@+id/filePath" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/filePath" />
	<TextView android:id="@+id/mimeType" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/mimeType" />
	<TextView android:id="@+id/imageURL" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/imageURL" />
	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/linearLayout1">
		<Button android:text="@string/copy" android:id="@+id/buttonCopy"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1"></Button>
		<Button android:text="@string/share" android:id="@+id/buttonShare"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1"></Button>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/linearLayout2" 
		android:layout_height="match_parent" >
		<ProgressBar android:layout_width="wrap_content"
			android:layout_height="wrap_content" style="?android:attr/progressBarStyleLarge"
			android:id="@+id/progressBarUpload" android:gravity="center_horizontal"
			></ProgressBar>
	</LinearLayout>
</LinearLayout>